# robocop

./: .gitignore  LICENSE  README.md  docker-compose.yml
config/: run.env
extra/: move_files.py
ml/yolov5/: capture_image.py  dataset.yaml  detect.py  detect_video.py  mongo_db.py  ocr.py
ml/yolov5/utils/: __init__.py
robocop_api/: .gitignore  main.py
robocop_api/api/controllers/: health_controller.py  tts_controller.py
robocop_api/core/text_to_speech/: text_to_speech_service.py
robocop_api/docker/: Dockerfile  requirements.txt
rover/: Dockerfile  README.md  action_log.csv  docker-compose.yml
rover/camera/: capture_image.py  detect_video_pmd.py
rover/camera/pico-cam-arm-ubuntu/doc/html/: a00026.html  a00029.html  a00029_source.html  a00032_source.html  a00035_source.html  a00041_source.html  a00047.html  a00047_source.html  a00050.html  a00059_source.html  (+90 more)
rover/camera/pico-cam-arm-ubuntu/python/: detect_video_pmd.py
rover/camera/pico-cam-arm-ubuntu/share/: royale-config.cmake
rover/control/: fuzzy.py  motors_and_encoders.py
rover/docker/: requirements.txt
rover/ml/: detect_image.py  detect_video.py  detect_video_pmd.py  model.py
rover/src/speed_tracker/: CMakeLists.txt  package.xml  setup.py
rover/src/speed_tracker/action/: LaunchRoboCop.action
rover/src/speed_tracker/launch/: speed_tracker.launch
rover/src/speed_tracker/msg/: fuzzy_inputs.msg  teleop_robocop.msg
rover/src/speed_tracker/src/: speed_tracker_client.py  speed_tracker_server.py
rover/src/speed_tracker/src/camera/pico-cam-arm-ubuntu/samples/cpp/sampleEventListener/: CMakeLists.txt  sampleEventListener.cpp
rover/src/speed_tracker/src/camera/pico-cam-arm-ubuntu/samples/cpp/sampleQtViewer/: CMakeLists.txt
simulation/RoboCop Simulation/: .gitignore
simulation/RoboCop Simulation/Assets/: FollowCamera3D.cs  FuzzyController.cs
simulation/RoboCop Simulation/Assets/Scenes/: SampleScene.unity
simulation/RoboCop Simulation/ProjectSettings/: InputManager.asset  ProjectSettings.asset
speed_tracker/speed_tracker_infrared/: speed_tracker_infrared.ino
speed_tracker/src/speed_tracker/: CMakeLists.txt  package.xml
speed_tracker/src/speed_tracker/action/: LaunchRoboCop.action
speed_tracker/src/speed_tracker/src/: speed_tracker_server.py
speed_tracker_arduino/: speed_trakcer.ino
speed_tracker_arduino/speed_tracker/: speed_tracker.ino
speed_tracker_arduino/speed_tracker_ultrasound/: speed_tracker_ultrasound.ino
(+127 files in other folders)
